--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_HOST=containers-us-west-166.railway.app
+DB_PORT=6144
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=PuaCtLYuemBlD0Tcpi6t
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
